cluster/apps/downloads/webtop/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webtop
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`webtop.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: webtop
          port: 3000
  tls:
    secretName: ${SECRET_CERT}
